# efetiva

./: .gitignore  35220761539813000149550010006222021019796790-nfe.xml  Procfile  manage.py  parametros.json  pyproject.toml  pytest.ini  requirements.txt
api/: serializers.py  views.py
clientes/: admin.py  facade.py  forms.py  models.py  print.py  urls.py  views.py
core/: constants.py  message.py  tools.py  urls.py  views.py
data/: Feriados_2021_2035.json  Tabela_inss_desde_2021.json
despesas/: facade.py  forms.py  models.py  print.py  urls.py  views.py
docs/: mkdocs.yml
faturamentos/: admin.py  apps.py  facade.py  forms.py  imprime.py  models.py  urls.py  views.py
minutas/: apps.py  facade.py  forms.py  itens_card.py  models.py  print.py  test_index_minuta.py  urls.py  views.py
orcamentos/: facade.py  forms.py  models.py  urls.py  views.py
pagamentos/: facade.py  facade.py.90ba1a373909eddd2f3475a7f95a6fd7.tmp  forms.py  html_data.py  models.py  print.py  urls.py  views.py
pessoas/: admin.py  classes.py  facade.py  facade.py.2a5f33bcf784e7d86032b21e9b4dd71a.tmp  forms.py  html_data.py  itens_card.py  models.py  print.py  urls.py  views.py
romaneio/: apps.py  models.py
romaneios/: apps.py  facade.py  models.py  print.py  urls.py  views.py
templates/: 403.html  base.html  criadivselecionada.html  tabelaformulario.html  teste.html
transefetiva/: asgi.py  roles.py  settings.py  urls.py  wsgi.py
usuarios/: forms.py  urls.py  views.py
veiculos/: admin.py  forms.py  models.py  urls.py  views.py
website/: facade.py  forms.py  models.py  print.py  (+2 more)
(+575 files in other folders)
