[project]
name = "Efetiva"
version = "25.0.0"
description = ""
authors = [
	{name = "Oswaldo Soares", email = "oswaldosoares@gmail.com"}
]
readme = "READNE.md"
requires-python = ">=3.9.2,<3.11"
dependencias = []

[tool-towncrier]
directory = "chanlogs.d"
filename = "CHANGELOG.md"

[tool.poetry.dependencies]
django = "3.1.3"
djangorestframework = "3.15.1"
django-role-permissions = "3.1.1"
mysqlclient = "^2.2.7"
pytz = "^2025.2"
sqlparse = "^0.5.3"
python-decouple = "3.6"
requests = "2.27.1"
babel = "2.14"
jinja2 = "3.1.5"
paginate = "0.5.7"
charset-normalizer = "2.0.12"
pillow = "9.1.0"
pyyaml = "6.0.1"
pyyaml-env-tag = "0.1"
packaging = "23.1"
regex = "2022.10.31"
python-dateutil = "2.8.2"
reportlab = "3.5.49"
webauthn = {git = "https://github.com/duo-labs/py_webauthn.git"}
django-extensions = "^3.1.5"
werkzeug = "^3.1.3"
django-cors-headers = "3.5.0"
fido2 = "^1.1.1"
num2words = "^0.5.14"
pdfrw = "^0.4"

[tool.poetry.group.dev.dependencies]
django-stubs = "5.1"
ruff = "^0.12.8"

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4", "RUF"]
exclude = [
	".git",
	"__pycache__",
	"build",
	"dist",
	"migrations",
	"venv",
	".venv",
]
# include = [".py"]

[tool.ryff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
